# LeetCode

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
docs/: compilation-hello_world.md  ut-cppcheck.md
scripts/: compile_file.sh
src/: 412-fizzbuzz.cpp  hello_world.cpp
